# metal_introduction

./: CMakeLists.txt  README.md  build.sh  main.cpp
include/: glfw_handler.hpp  initializer.hpp  window.hpp
include/glfw/: glfw_handler.hpp  glfw_initializer.hpp
src/: CMakeLists.txt  api_handler.hpp  glfw_handler.cpp  glfw_handler.hpp  handler.hpp  metal_handler.cpp  metal_handler.hpp
src/extensions/: glfw_private.hpp  ns.hpp
src/glad/: glad_wrapper.cpp  reader.cpp
src/glfw/: glfw_handler.cpp  glfw_handler.hpp  glfw_initializer.cpp  glfw_initializer.hpp  glfw_wrapper.cpp  handler.hpp
src/handler/: initializer.cpp  window.cpp
src/internal_include/glad/: glad_wrapper.hpp  reader.hpp
src/internal_include/glfw/: glfw_wrapper.hpp
src/internal_include/interface/: handler.hpp
src/shader/: fragment.frag  vertex.vert
src/wrapper/: glfw_wrapper.cpp  glfw_wrapper.hpp
